Comment Out: EggHead

--- a/src/app/flexchat.component.html
+++ b/src/app/flexchat.component.html
@@ -5,9 +5,9 @@
 
 <div class="chat-container">
   
-  <!-- egghead.io -->
+  <!-- egghead.io 
   <h1> {{clock | async }} </h1>
- 
+  -->
   <flexchat-message
     *ngFor="let message of messages | async"
     [message]="message">
